--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "mailjet/mailjet-apiv3-php": "^1.5",
-        "dompdf/dompdf": "^3.1"
+        "dompdf/dompdf": "^3.1",
+        "phpmailer/phpmailer": "^7.0"
     }
 }
